--- a/.github/workflows/music_gen.yml
+++ b/.github/workflows/music_gen.yml
@@ -1,7 +1,7 @@
 name: AI Music Generator Engine
 on:
   repository_dispatch:
-    types: [start_composing] # 响应你 Python 脚本里的信号
+    types: [start_composing]
 
 jobs:
   compose:
@@ -17,32 +17,39 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          pip install -r requirements.txt
+          pip install requests gradio_client huggingface_hub
 
       - name: Run Music Engine
         env:
-          # 这里的歌词和风格是从你的 Python 脚本传过来的
           LYRICS: ${{ github.event.client_payload.lyrics }}
           STYLE: ${{ github.event.client_payload.style }}
+          HF_TOKEN: ${{ secrets.HF_TOKEN }} # 调用保险箱里的 Token
         run: |
-          # 这里我们调用 Hugging Face 的免费 YuE 算力接口
-          # 这样就不需要消耗 GitHub 昂贵的 GPU 额度，且速度极快
           python -c "
           from gradio_client import Client
           import os
           
-          # 这里的 'm-a-p/YuE-Music-1' 是目前最火的开源 YuE 空间
-          client = Client('m-a-p/YuE-Music-1')
+          # 使用 Token 登录并调用模型
+          client = Client('m-a-p/YuE-Music-1', hf_token=os.getenv('HF_TOKEN'))
+          
+          # 运行预测
           result = client.predict(
               lyrics=os.getenv('LYRICS'),
               genre=os.getenv('STYLE'),
               api_name='/predict'
           )
-          print(f'歌曲生成成功：{result}')
+          print(f'歌曲已生成，存储路径：{result}')
+          
+          # 这一步是为了把生成的文件改名并移动到当前目录，方便后续上传
+          import shutil
+          if isinstance(result, str):
+              shutil.copy(result, './final_song.mp3')
+          elif isinstance(result, list):
+              shutil.copy(result[0], './final_song.mp3')
           "
 
       - name: Upload Result
         uses: actions/upload-artifact@v4
         with:
           name: my-rap-song
-          path: ./*.mp3 # 假设生成的文件后缀是 mp3
+          path: ./final_song.mp3
