--- a/.github/workflows/music_gen.yml
+++ b/.github/workflows/music_gen.yml
@@ -9,16 +9,12 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-
       - name: Install Dependencies
-        run: |
-          pip install requests gradio_client huggingface_hub
-
+        run: pip install gradio_client huggingface_hub
       - name: Run Music Engine
         env:
           LYRICS: ${{ github.event.client_payload.lyrics }}
@@ -30,29 +26,26 @@ jobs:
           import shutil
           from gradio_client import Client
           
-          # 修正后的调用逻辑
+          # 核心修正：通过环境变量隐式传递 Token
+          os.environ['HUGGINGFACE_TOKEN'] = os.getenv('HF_TOKEN')
+          
           try:
-              # 设置环境变量供库自动读取 Token
-              os.environ['HUGGINGFACE_TOKEN'] = os.getenv('HF_TOKEN')
-              
+              # 初始化时不带任何 token 参数，避开报错
               client = Client('m-a-p/YuE-Music-1')
               
-              # predict 的参数根据 YuE 空间目前的 API 调整
               result = client.predict(
                   lyrics=os.getenv('LYRICS'),
                   genre=os.getenv('STYLE'),
                   api_name='/predict'
               )
               
-              # 处理返回结果 (YuE 通常返回文件路径列表)
-              audio_path = result[0] if isinstance(result, list) else result
-              shutil.copy(audio_path, './final_song.mp3')
-              print('Successfully generated music!')
+              # 处理路径
+              path = result[0] if isinstance(result, list) else result
+              shutil.copy(path, './final_song.mp3')
           except Exception as e:
               print(f'Error: {e}')
               exit(1)
           "
-
       - name: Upload Result
         uses: actions/upload-artifact@v4
         with:
