--- a/.github/workflows/music_gen.yml
+++ b/.github/workflows/music_gen.yml
@@ -25,39 +25,51 @@ jobs:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
           python -c "
-          import os, shutil
+          import os, shutil, sys
           from gradio_client import Client
           
-          os.environ['HUGGINGFACE_TOKEN'] = os.getenv('HF_TOKEN')
+          # 设置 HF Token 到环境变量
+          token = os.getenv('HF_TOKEN')
+          if not token:
+              print('Error: HF_TOKEN secret is missing in GitHub!')
+              sys.exit(1)
+              
+          os.environ['HUGGINGFACE_HUB_TOKEN'] = token
           
           try:
-              # 连接 YuE 模型
-              client = Client('m-a-p/YuE-Music-1')
+              print(f'Connecting to YuE Music Engine...')
+              # 显式使用 token 初始化，解决 404/Permission denied 问题
+              client = Client('m-a-p/YuE-Music-1', token=token)
               
-              # 调用接口生成音乐
-              # 这里的参数名要根据 YuE 的最新 API 调整，目前通常是 genre, lyrics 等
+              print(f'Generating music with style: {os.getenv(\"STYLE\")}')
               result = client.predict(
                   genre=os.getenv('STYLE'),
                   lyrics=os.getenv('LYRICS'),
                   api_name='/predict'
               )
               
-              # 提取返回的音频路径
-              # result 通常是一个元组，第一个元素是生成的音频文件
-              path = result[0] if isinstance(result, (list, tuple)) else result
-              if path and os.path.exists(path):
-                  shutil.copy(path, './final_song.mp3')
-                  print('Success: Music generated at final_song.mp3')
+              # 自动解析返回结果中的文件路径
+              if isinstance(result, (list, tuple)):
+                  audio_path = result[0]
               else:
-                  print('Error: No file generated')
-                  exit(1)
+                  audio_path = result
+                  
+              if audio_path and os.path.exists(audio_path):
+                  shutil.copy(audio_path, './final_song.mp3')
+                  print('Success: Music saved as final_song.mp3')
+              else:
+                  print('Error: Generated path is invalid')
+                  sys.exit(1)
+                  
           except Exception as e:
-              print(f'Runtime Error: {e}')
-              exit(1)
+              print(f'Critical Runtime Error: {e}')
+              sys.exit(1)
           "
 
       - name: Upload Result
+        if: success()
         uses: actions/upload-artifact@v4
         with:
-          name: ai-music-output
+          name: ai-music-file
           path: ./final_song.mp3
+          retention-days: 5
